--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,12 +10,19 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      <form class="form-inline" action="/login" method="POST">
-        <label for="username"></label>
-        <input class="form-control" type="text" name="username" placeholder="User Name"
-          style="width: 300px; margin: 1em">
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+      <% if (username) { %>
+        <form class="form-inline align-items-baseline" action="/logout" method="POST">
+          <h6 class="mr-3">Logged In As: <%= username %></h6>
+        <button type="submit" class="btn btn-primary">Logout</button>
+        </form>
+      <% } else { %>
+        <form class="form-inline" action="/login" method="POST">
+          <label for="username"></label>
+          <input class="form-control" type="text" name="username" placeholder="User Name"
+            style="width: 300px; margin: 1em">
+          <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+     <% } %>
     </div>
   </nav>
 </header>
