--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,18 +13,20 @@
 
 <body>
   <% include ./partials/_header %>
-  <h1 class="mt-3 ml-5">Create Account </h1>
-  <div id="emailform" class="form-group mt-5 ml-5">
-    <label for="email"><h3>Email address</h3></label>
-    <input type="email" class="form-control col-5" name="email" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll always sell your information to Google 😏</small>
-  </div>
-  <div id="passwordform" class="form-group mt-3 ml-5">
-    <label for="password"><h3>Password</h3></label>
-    <input type="password" class="form-control col-5" name="password" aria-describedby="passwordHelp" placeholder="Password">
-    <small id="passwordHelp" class="form-text text-muted">Go ahead, use the password you always use 🤓</small>
-  </div>
-  <button type="submit" class="btn btn-outline-success mt-3 ml-5">Register</button>
+  <h1 class="mt-3 ml-5 text-success">Create Account </h1>
+  <form action="/register" method="POST">
+    <div id="emailform" class="form-group mt-5 ml-5">
+      <label for="email"><h3 class="text-primary">Email address</h3></label>
+      <input type="email" class="form-control col-5" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted">We'll always sell your information to Google 😏</small>
+    </div>
+    <div id="passwordform" class="form-group mt-3 ml-5">
+      <label for="password"><h3 class="text-primary">Password</h3></label>
+      <input type="password" class="form-control col-5" name="password" aria-describedby="passwordHelp" placeholder="Password">
+      <small id="passwordHelp" class="form-text text-muted">Go ahead, use the password you always use 🤓</small>
+    </div>
+    <button type="submit" class="btn btn-outline-success mt-3 ml-5">Register</button>
+  </form>
 
 
   <!-- Bootstrap JS -->
