changed log in display format to email

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,9 +10,9 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      <% if (username) { %>
+      <% if (user) { %>
         <form class="form-inline align-items-baseline" action="/logout" method="POST">
-          <h6 class="mr-3">Logged In As: <%= username %></h6>
+          <h6 class="mr-3">Logged In As: <%= user.email %></h6>
         <button type="submit" class="btn btn-primary">Logout</button>
         </form>
       <% } else { %>
