update the login handler

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,7 +17,7 @@
         </form>
       <% } else { %>
         <div class="navbar-nav">
-          <form class="mr-3" action="/login" method="POST">
+          <form class="mr-3" action="/login" method="GET">
             <button type="submit" class="btn btn-primary">Login</button>
           </form>
           <form class="" action="/Register" method="POST">
