debug faulty register and log in route

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -20,7 +20,7 @@
           <form class="mr-3" action="/login" method="GET">
             <button type="submit" class="btn btn-primary">Login</button>
           </form>
-          <form class="" action="/Register" method="POST">
+          <form class="" action="/register" method="GET">
             <button type="submit" class="btn btn-primary">Register</button>
           </form>
         </div>
