--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,7 +23,7 @@
       <label for="password"><h3 class="text-primary">Password</h3></label>
       <input type="password" class="form-control col-5" name="password" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-outline-success mt-3 ml-5">login</button>
+    <button type="submit" class="btn btn-outline-success mt-3 ml-5">Login</button>
   </form>
 
 
