--- a/views/partials/_register.ejs
+++ b/views/partials/_register.ejs
@@ -1,16 +1,16 @@
-<h1 class="mt-3 ml-5 text-success">Create Account </h1>
-  <form action="/register" method="POST">
-    <div id="emailform" class="form-group mt-5 ml-5">
-      <label for="email"><h3 class="text-primary">Email address</h3></label>
-      <input type="email" class="form-control col-5" name="email" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll always sell your information to Google 😏</small>
+<h1 class="mt-3 mb-3 text-center text-success">Create Account </h1>
+  <form class="text-center" action="/register" method="POST">
+    <label for="email"><h3 class="text-primary">Email address</h3></label>
+    <div id="emailform" class="form-inline justify-content-center">
+      <input type="email" class="form-control col-2 text-center" name="email" aria-describedby="emailHelp" placeholder="Enter email">
     </div>
-    <div id="passwordform" class="form-group mt-3 ml-5">
-      <label for="password"><h3 class="text-primary">Password</h3></label>
-      <input type="password" class="form-control col-5" name="password" aria-describedby="passwordHelp" placeholder="Password">
-      <small id="passwordHelp" class="form-text text-muted">Go ahead, use the password you always use 🤓</small>
+    <small id="emailHelp" class="text-center form-text text-muted">We'll always sell your information to Google 😏</small>
+    <label for="password"><h3 class="text-primary mt-3">Password</h3></label>
+    <div id="passwordform" class="form-inline justify-content-center">
+      <input type="password" class="form-control col-2 text-center" name="password" aria-describedby="passwordHelp" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-outline-success mt-3 ml-5">Register</button>
+    <small id="passwordHelp" class="text-center form-text text-muted">Go ahead, use the password you always use 🤓</small>
+    <button type="submit" class="btn btn-outline-success mt-4">Register</button>
   </form>
 
 
