style error page

--- a/views/login_fail.ejs
+++ b/views/login_fail.ejs
@@ -14,8 +14,8 @@
 <body>
   <% include ./partials/_header %>
   <div class="alert alert-danger " role="alert">
-    <h4 class="alert-heading text-center">Error Code: 403 - Forbidden</h4>
-    <p class="text-center">INVALID EMAIL OR INVALID PASSWORD</p>
+    <h4 class="display-4 font-weight-bold mt-2 mb-5 alert-heading text-center">Error Code: 403 - Forbidden</h4>
+    <p class="font-weight-bold text-center">INVALID EMAIL OR INVALID PASSWORD</p>
   </div>
   <% include ./partials/_login %>
 </body>
