--- a/views/partials/_login.ejs
+++ b/views/partials/_login.ejs
@@ -1,14 +1,14 @@
-<h1 class="mt-3 mb-3 text-success text-center">Login </h1>
+<h1 class="mt-5 mb-3 text-success text-center font-weight-bold">🧾Login </h1>
   <form class="text-center" action="/login" method="POST">
-    <label for="email"><h3 class="text-primary">Email address</h3></label>
+    <label for="email"><h3 class="mt-4 font-weight-bold text-info">📮Email address</h3></label>
     <div id="emailform" class="form-inline justify-content-center">
       <input type="email" class="form-control col-2 text-center" name="email" placeholder="Enter email">
     </div>
-    <label for="password"><h3 class="text-primary mt-3 ">Password</h3></label>
+    <label for="password"><h3 class="font-weight-bold text-info mt-4 ">🔐Password</h3></label>
     <div id="passwordform" class="form-inline justify-content-center">
       <input type="password" class="form-control col-2 text-center" name="password" placeholder="Password">
     </div>
-    <button type="submit" class="btn btn-outline-success mt-4">Login</button>
+    <button type="submit" class="btn btn-outline-success mt-4 font-weight-bold">Login</button>
   </form>
 
 
