--- a/views/partials/_register.ejs
+++ b/views/partials/_register.ejs
@@ -1,16 +1,16 @@
-<h1 class="mt-5 mb-3 text-center text-success">Create Account </h1>
+<h1 class="mt-5 mb-3 text-center text-success font-weight-bold ">🔨Create Account </h1>
   <form class="text-center" action="/register" method="POST">
-    <label for="email"><h3 class="text-primary">Email address</h3></label>
+    <label for="email"><h3 class="mt-4 text-info font-weight-bold ">📮Email address</h3></label>
     <div id="emailform" class="form-inline justify-content-center">
-      <input type="email" class="form-control col-2 text-center" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+      <input type="email" class="form-control col-2 text-center mb-2" name="email" aria-describedby="emailHelp" placeholder="Enter email"> 
     </div>
-    <small id="emailHelp" class="text-center form-text text-muted">We'll always sell your information to Google 😏</small>
-    <label for="password"><h3 class="text-primary mt-3">Password</h3></label>
+    <small id="emailHelp" class="h6 text-center form-text text-muted">We'll always sell your information to Google 🤑</small>
+    <label for="password"><h3 class="text-info font-weight-bold mt-3">🔐Password</h3></label>
     <div id="passwordform" class="form-inline justify-content-center">
-      <input type="password" class="form-control col-2 text-center" name="password" aria-describedby="passwordHelp" placeholder="Password">
+      <input type="password" class="form-control col-2 text-center mb-2" name="password" aria-describedby="passwordHelp" placeholder="Password">
     </div>
-    <small id="passwordHelp" class="text-center form-text text-muted">Go ahead, use the password you always use 🤓</small>
-    <button type="submit" class="btn btn-outline-success mt-4">Register</button>
+    <small id="passwordHelp" class="h6 text-center form-text text-muted">Go ahead, use the password you always use 🤦🏻‍♂️</small>
+    <button type="submit" class="btn btn-outline-success mt-4 font-weight-bold">Register</button>
   </form>
 
 
