--- a/views/reg_fail.ejs
+++ b/views/reg_fail.ejs
@@ -15,7 +15,7 @@
   <% include ./partials/_header %>
   <div class="alert alert-danger " role="alert">
       <h4 class="display-4 font-weight-bold mt-2 mb-4 alert-heading text-center">Error Code: 400 - Bad Request</h4>
-      <h5 class="font-weight-bold mb-5 text-center">EMAIL INPUT FIELD IS EMPTY OR ACCOUNT ALREADY EXIST</h5>
+      <h5 class="font-weight-bold text-center">EMAIL INPUT FIELD IS EMPTY OR ACCOUNT ALREADY EXIST</h5>
   </div>
   <% include ./partials/_register %>
 </body>
