--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -11,26 +11,26 @@
 <body>
   <% include ./partials/_header %>
   <main style="margin: 1em;">
-    <h3>My URLs</h3>
-    <table class="table">
+    <h3 class="text-center font-weight-bold bg-info text-white mt-5 py-3 ">🗃My URLs</h3>
+    <table class="table table-info text-white">
       <thead>
-        <tr>
-          <th scope="col">Short URL</th>
-          <th scope="col">Long URL</th>
-          <th scope="col">Edit</th>
-          <th scope="col">Delete</th>
+        <tr class="bg-info">
+          <th class="h4 text-center font-weight-bold pt-3" scope="col">🌿Short URL</th>
+          <th class="h4 text-center font-weight-bold" scope="col">🌲Long URL</th>
+          <th class="h4 text-center font-weight-bold" scope="col">🌚Edit</th>
+          <th class="h4 text-center font-weight-bold" scope="col">😱Delete</th>
         </tr>
       </thead>
       <tbody>
         <% for(let url in urls) { %>
-          <tr>
-            <td><%= url %></td>
-            <td><%= urls[url] %></td>
-            <td><form method="POST" action="/urls/<%= url %>">
-              <button type="submit" class="btn btn-outline-info">Edit</button>
+          <tr class="bg-info">
+            <td class="font-weight-bold text-center"><%= url %></td>
+            <td class="font-weight-bold text-center"><%= urls[url] %></td>
+            <td><form class="text-center" method="POST" action="/urls/<%= url %>">
+              <button type="submit" class="btn btn-outline-light font-weight-bold">Edit</button>
             </form></td>
-            <td><form method="POST" action="/urls/<%= url %>/delete">
-              <button type="submit" class="btn btn-outline-danger">Delete</button>
+            <td><form class="text-center" method="POST" action="/urls/<%= url %>/delete">
+              <button type="submit" class="btn btn-outline-danger font-weight-bold">Delete</button>
             </form></td>
           </tr>
         <% } %>
