--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -16,13 +16,13 @@
 
   <% include partials/_header %>
 
-  <main style="margin: 1em;">
-    <h3>Create TinyURL</h3>
-    <form class="form-inline" action="/urls" method="POST">
+  <main class ="card-footer text-muted">
+    <h3 class="font-weight-bold mt-5 text-center text-info">🔨Create TinyURL</h3>
+    <form class="form-inline justify-content-center align-content-center" action="/urls" method="POST">
       <div class="form-group mb-2">
-        <label for="longURL">Enter a URL:</label>
+        <label class="font-weight-bold text-info" for="longURL"><h5 class="font-weight-bold">Enter a URL  ➡️</h5></label>
         <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-info font-weight-bold">Submit</button>
       </div>
     </form>
   </main>
