--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,20 +10,20 @@
 
 <body>
   <% include ./partials/_header %>
-  <div class="card text-center">
-    <div class="card-header"></div>
+  <div class="card-footer text-muted text-center">
+    <div class=""></div>
     <div class="card-body">
-      <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-      <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+      <h3 class="text-info font-weight-bold mt-4">TinyURL for: <%= longURL %></h3>
+      <h5 class="card-text text-info font-weight-bold">Short URL: <a class="text-danger" href="/u/<%= shortURL %>"><%= shortURL %></a></h5>
     </div>
-    <div class="card-footer text-muted">
-      <h1>Edit</h1>
+    <div class="">
+      <h2 class="text-info mt-4">Edit</h2>
       <form class="form-inline justify-content-center" method="POST" action="/urls/<%= shortURL %>/edit">
         <div class="form-group mb-2">
-          <label for="updateURL">New URL:</label>
+          <label class="font-weight-bold text-info" for="updateURL">New URL:</label>
           <input class="form-control" type="text" name="updateURL" placeholder="http://"
             style="width: 300px; margin: 1em">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-info">Submit</button>
         </div>
       </form>
     </div>
