--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -8,10 +8,10 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <title>TinyApp</title>
 </head>
-<body>
+<body class="bg-info">
   <% include ./partials/_header %>
   <main style="margin: 1em;">
-    <h3 class="text-center font-weight-bold bg-info text-white mt-5 py-3 ">🗃My URLs</h3>
+    <h3 class="text-center font-weight-bold bg-info text-white mt-4 py-3 ">🗃My URLs</h3>
     <table class="table table-info text-white">
       <thead>
         <tr class="bg-info">
