--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,36 +10,6 @@
 </head>
 <body class="bg-light">
   <% include ./partials/_header %>
-  <main style="margin: 1em;">
-    <h3 class="text-center font-weight-bold bg-info text-white mt-4 py-3 ">🗃My URLs</h3>
-    <table class="table table-info text-white">
-      <thead>
-        <tr class="bg-info">
-          <th class="h4 text-center font-weight-bold pt-3" scope="col">🌿Short URL</th>
-          <th class="h4 text-center font-weight-bold" scope="col">🌲Long URL</th>
-          <th class="h4 text-center font-weight-bold" scope="col">🌚Edit</th>
-          <th class="h4 text-center font-weight-bold" scope="col">😱Delete</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% for(let url in urls) { %>
-          <tr class="bg-info">
-            <td class="font-weight-bold text-center"><%= url %></td>
-            <td class="font-weight-bold text-center"><%= urls[url].longURL %></td>
-            <td><form class="text-center" method="POST" action="/urls/<%= url %>">
-              <button type="submit" class="btn btn-outline-light font-weight-bold">Edit</button>
-            </form></td>
-            <td><form class="text-center" method="POST" action="/urls/<%= url %>/delete">
-              <button type="submit" class="btn btn-outline-danger font-weight-bold">Delete</button>
-            </form></td>
-          </tr>
-        <% } %>
-      </tbody>
-    </table>
-  </main>
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <% include ./partials/_index %>
 </body>
 </html>
