user can only edit their own urls

--- a/views/invalid_edit.ejs
+++ b/views/invalid_edit.ejs
@@ -12,7 +12,7 @@
 <body>
   <% include ./partials/_header %>
   <div class="alert alert-danger " role="alert">
-    <h4 class="display-4 font-weight-bold mt-2 mb-4 alert-heading text-center">DON'T TRY TO DELETE OTHER PEOPLE STUFF 😒</h4>
+    <h4 class="display-4 font-weight-bold mt-2 mb-4 alert-heading text-center">DON'T TRY TO EDIT OTHER PEOPLE STUFF 😒</h4>
   </div>
 </body>
 </html>
