--- a/views/partials/_index.ejs
+++ b/views/partials/_index.ejs
@@ -22,7 +22,7 @@
       <td class="font-weight-bold text-center"><%= url %></td>
       <td class="font-weight-bold text-center"><%= urls[url] %></td>
       <td>
-        <form class="text-center" method="POST" action="/urls/<%= url %>">
+        <form class="text-center" method="get" action="/urls/<%= url %>">
           <button type="submit" class="btn btn-outline-light font-weight-bold">Edit</button>
         </form>
       </td>
