debugged all non stretch GET /urls/:id route

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
       <div class="navbar-nav font-weight-bold">
         <a class="nav-item nav-link font-weight-bold" href="/urls"><h3 class="font-weight-bold mt-2 ml-1">My URLs</h3></a>
-        <a class="nav-item nav-link font-weight-bold" href="/urls/new"><h3 class="font-weight-bold mt-2 ml-1">Create New URL</h3></a>
+        <a class="nav-item nav-link font-weight-bold" href="/urls/new"><h3 class="font-weight-bold mt-2 ml-1">Create a NEW SHORT LINK</h3></a>
       </div>
       <% if (user) { %>
         <form class="form-inline align-items-baseline" action="/logout" method="POST">
