--- a/views/partials/_show.ejs
+++ b/views/partials/_show.ejs
@@ -6,12 +6,12 @@
   </div>
   <div class="">
     <h2 class="text-info mt-4">Edit</h2>
-    <form class="form-inline justify-content-center" method="POST" action="/urls/<%= shortURL %>/edit">
+    <form class="form-inline justify-content-center" method="POST" action="/urls/<%= shortURL %>">
       <div class="form-group mb-2">
         <label class="font-weight-bold text-info" for="updateURL">New URL:</label>
         <input class="form-control" type="text" name="updateURL" placeholder="http://"
           style="width: 300px; margin: 1em">
-        <button type="submit" class="btn btn-info">Submit</button>
+        <button type="submit" class="btn btn-info">Update</button>
       </div>
     </form>
   </div>
