server is now RESTful

--- a/views/partials/_index.ejs
+++ b/views/partials/_index.ejs
@@ -27,7 +27,7 @@
         </form>
       </td>
       <td>
-        <form class="text-center" method="POST" action="/urls/<%= url %>/delete">
+        <form class="text-center" method="POST" action="/urls/<%= url %>?_method=DELETE">
           <button type="submit" class="btn btn-outline-danger font-weight-bold">Delete</button>
         </form>
       </td>
